<resources>
    <string name="app_name">Ultra Movie 15</string>
    <string name="app_version">Ultra Movie 0.1.0</string>
    <string name="app_desc">Made by Group 15 as an assignment of \nPemrograman Mobile final exam.</string>

    <string name="navigation_item_movies">Movies</string>
    <string name="navigation_item_genres">Genres</string>
    <string name="navigation_item_writers">Writers</string>
    <string name="navigation_item_more">More</string>
    <string name="navigation_item_about_us">About us</string>

    <string name="movies_home_title">Movies</string>
    <string name="genres_home_title">Genres</string>
    <string name="writers_home_title">Writers</string>

    <string name="app_bar_item_delete">Delete</string>
    <string name="app_bar_desc_delete">Delete</string>

    <string name="fab_desc_add">Add</string>
    <string name="fab_desc_edit">Edit</string>
    <string name="fab_desc_submit">Submit</string>

    <string name="card_genre_name_placeholder" translatable="false">Genre</string>
    <string name="card_movie_title_placeholder" translatable="false">Title</string>
    <string name="card_movie_genre_placeholder" translatable="false">Genres</string>
    <string name="card_movie_writer_placeholder" translatable="false">Writers</string>
    <string name="card_writer_name_placeholder" translatable="false">Name</string>

    <string name="movie_view_writer_label">Written by</string>
    <string name="movie_view_director_label">Directed by</string>
    <string name="movie_view_star_label">Starring</string>
    <string name="movie_view_synopsis_label">Synopsis</string>

    <string name="movie_fill_app_title_add">Add Movie</string>
    <string name="movie_fill_app_title_edit">Edit Movie</string>

    <string name="genre_fill_name_label">Genre Name</string>
    <string name="genre_view_movies_label">Movies of this genre:</string>
    <string name="genre_view_delete_title">Delete this genre?</string>
    <string name="genre_view_delete_message">Deleted data will be lost permanently and cannot be recovered.</string>

    <string name="writer_view_email_label">Email</string>
    <string name="writer_view_phone_label">Phone</string>
    <string name="writer_view_movies_label">Movies by this writer:</string>

    <string name="writer_fill_name_label">Writer\'s Name</string>

    <string name="writer_view_delete_title">Delete this writer?</string>
    <string name="writer_view_delete_message">Deleted data will be lost permanently and cannot be recovered.</string>

    <string name="movie_view_delete_title">Delete this movie?</string>
    <string name="movie_view_delete_message">Deleted data will be lost permanently and cannot be recovered.</string>

    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>

    <string name="movie_fill_error_title_empty">Title is required.</string>
    <string name="movie_fill_error_genre_empty">A minimum of one genre is required.</string>
    <string name="movie_fill_error_writer_empty">A minimum of one writer is required.</string>

    <string name="app_server_error">Failed to connect to the server. Please try again later.</string>
    <string name="message_loading">Loading...</string>
    <string name="message_logging_in">Logging in...</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="level_member">Member</string>
    <string name="level_admin">Admin</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_country">Country Origin</string>
    <string name="prompt_level">Level</string>

    <string name="login_title">"Login"</string>
    <string name="login_subtitle">Please enter your username and password.</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="invalid_username">Not a valid username.</string>
    <string name="invalid_password">Password must be >5 characters.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="desc_to_register">Don\'t have an account?</string>
    <string name="desc_to_login">Already have an account?</string>

    <string name="confirmation_logout">Do you want to logout?</string>

    <string name="repo_link" translatable="false">xeanth8/AplikasiUltraMovie_Android</string>
    <string name="repo_label">The source code of this app is available on GitHub.</string>
    <string name="copyright" translatable="false">Copyright ©Kelompok 15</string>

    <string name="creator_fendyanto_name" translatable="false">Fendyanto</string>
    <string name="creator_johanes_name" translatable="false">Johanes Shane</string>
    <string name="creator_kosasi_name" translatable="false">Kosasi</string>
    <string name="creator_michelle_name" translatable="false">Michelle Wong</string>
    <string name="creator_phone" translatable="false">081283456789</string>
    <string name="more_user_identity_label">User identity</string>
    <string name="more_option_label">Options</string>
    <string name="more_item_about_us">About Us</string>
    <string name="more_app_bar_title">More options</string>
</resources>