<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/card_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_movie_title_placeholder"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="@color/md_theme_light_onSurface"/>


        <TextView
            android:id="@+id/card_movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_movie_genre_placeholder"
            android:textColor="@color/md_theme_light_onSurface"/>

        <TextView
            android:id="@+id/card_movie_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_movie_writer_placeholder"
            android:textColor="@color/md_theme_light_onSurface"/>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>