<?xml version="1.0" encoding="utf-8"?>

<!-- Note: A RecyclerView can also be used -->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp">

        <!--                <com.google.android.material.imageview.ShapeableImageView-->
        <!--                    android:id="@+id/movie_view_poster"-->
        <!--                    android:layout_width="200dp"-->
        <!--                    android:layout_height="300dp"-->
        <!--                    android:layout_marginTop="16dp"-->
        <!--                    app:layout_constraintTop_toTopOf="parent"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    android:src="@drawable/poster_placeholder"-->
        <!--                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayPosterCorner"-->
        <!--                    android:scaleType="fitXY"/>-->

        <TextView
            android:id="@+id/movie_view_title_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="Title title title title"
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/movie_view_writer_label_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_view_writer_label"
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_view_title_placeholder" />

        <TextView
            android:id="@+id/movie_view_writer_content_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:text=""
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/movie_view_writer_label_placeholder"
            app:layout_constraintTop_toBottomOf="@id/movie_view_title_placeholder" />

        <TextView
            android:id="@+id/movie_view_director_label_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_view_director_label"
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_view_writer_content_placeholder" />

        <TextView
            android:id="@+id/movie_view_director_content_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="120dp"
            android:text=""
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/movie_view_director_label_placeholder"
            app:layout_constraintTop_toBottomOf="@id/movie_view_writer_content_placeholder" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/movie_chip_group_genres_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_view_director_content_placeholder">

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/movie_view_star_label_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_view_star_label"
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_chip_group_genres_placeholder" />

        <TextView
            android:id="@+id/movie_view_star_content_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="StarringStarring\n\n"
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_view_star_label_placeholder" />

        <TextView
            android:id="@+id/movie_view_synopsis_label_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/movie_view_synopsis_label"
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_view_star_content_placeholder" />

        <TextView
            android:id="@+id/movie_view_synopsis_content_placeholder"
            app:layout_constrainedWidth="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="\n\n\n\n\n\n\n\n"
            android:textColor="#DDDDDD"
            android:background="#DDDDDD"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_view_synopsis_label_placeholder" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>